# game-of-life

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: lib.rs  main.rs
tools/: plot.py
web/: index.html  main.js  style.css
