[package]
name = "game-of-life"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.1"
wasm-bindgen = "0.2"

# rand -> getrandom needs an explicit browser backend on wasm32-unknown-unknown.
# Pair this with the rustflag in .cargo/config.toml.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
